# backend-gateway-service

./: Dockerfile  README.md  private_key.der  vsomeip.json
build_src/: .gitignore  CMakeLists.txt  ChainedCertficate.cer  README.md
build_src/dependencies/http_client/: CMakeLists.txt  GetRequestClient.cpp  HttpRequest.cpp  HttpRequest.hpp  PostRequestClient.cpp  PostRequestClient.hpp  PutRequestClient.cpp  PutRequestClient.hpp
build_src/dependencies/someipService/: CMakeLists.txt  ServiceManagerAdapter.hpp
build_src/src/: Authenticator.hpp  Internetconnectivity.hpp  main.cpp  servicesId.hpp
dependencies/http_client/: CMakeLists.txt  GetRequestClient.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpRequestBuilder.cpp  HttpRequestBuilder.hpp
dependencies/someipService/: CMakeLists.txt  ServiceManagerAdapter.cpp  ServiceManagerAdapter.hpp
src/: main.cpp  servicesId.hpp
